<resources>
    <string name="app_name">LzVideoUpdate</string>
    <string name="common_request_loading">正在请求中...</string>
    <string name="login_param_null">参数不能为空</string>
    <string name="login_failed">登录失败</string>
    <string name="main_exit_tips">再按一次返回键退出程序</string>
    <string name="play_capture_success">抓图成功，保存路径：</string>
    <string name="play_capture_failed">抓图失败</string>
    <string name="play_back_record_not_create">录像未生成</string>
    <string name="play_back_pause">暂停</string>
    <string name="play_back_resume">继续</string>
    <string name="play_back_recording">正在录像中</string>
    <string name="play_talk_close">对讲关闭</string>
    <string name="play_talk_start">开始对讲</string>
    <string name="play_talk_failed">对讲失败</string>
    <string name="play_record_start">开始录像</string>
    <string name="play_record_stop">停止录像，保存路径：</string>
    <string name="play_record_stop_tips">停止录像</string>
    <string name="play_play">播放</string>
    <string name="play_stop">停止</string>
    <string name="play_net_error">网络异常</string>
    <string name="play_talk_no_permission">对讲权限有问题</string>
    <string name="device_channel_null">通道为空</string>
    <string name="device_get_failed">获取失败或者列表为空</string>
    <string name="device_all_device">全部设备</string>
    <string name="device_root">根节点</string>
    <string name="device_group_is_null">组织为空</string>
    <string name="login_server_ip">平台IP</string>
    <string name="login_server_port">平台端口</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登陆</string>
    <string name="play_back_title">录像回放</string>
    <string name="play_back_pre_month">前一月</string>
    <string name="play_back_next_month">后一月</string>
    <string name="play_item_capture">抓图</string>
    <string name="play_item_record">录像</string>
    <string name="play_back_item_pause">暂停</string>
    <string name="play_item_audio">声音</string>
    <string name="play_item_play">播放</string>
    <string name="play_back_item_speed_add">速度+</string>
    <string name="play_back_item_speed_decrease">速度-</string>
    <string name="play_back_item_server_record">中心录像</string>
    <string name="play_back_item_device_record">设备录像</string>
    <string name="common_item_refresh">刷新</string>
    <string name="device_item_play_back">回放</string>
    <string name="play_online_title">实时预览</string>
    <string name="play_online_talk">对讲</string>
    <string name="play_online_cloud">云台</string>
    <string name="play_online_hd">高清</string>
    <string name="play_online_sd">标清</string>
    <string name="play_online_fl">流畅</string>
    <string name="play_online_remove">移除</string>
    <string name="play_online_full">全屏</string>

    <string name="permission_title_setting">Permission Setting</string>
    <string name="permission_title_description">Permission Description</string>
    <string name="permission_request_due_to_reject_never">%s permissions apply failed,please go to "Mobile-Setting" to authorize,or functions unusable</string>
    <string name="permission_request_due_to_reject">Please grant %s permissions,or functions unusable</string>
    <string name="permission_apply_request">To authorize</string>
    <string name="permission_apply_setting">To set up</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_failed_by_rom">Unable to access permission setting page due to your rom,please go to "Mobile-Setting"—>"Application"—>"Rights" to authorize permissions</string>

    <string name="permission_calendar">Calendar、</string>
    <string name="permission_camera">Camera、</string>
    <string name="permission_contacts">Contacts、</string>
    <string name="permission_location">Location、</string>
    <string name="permission_microphone">Microphone、</string>
    <string name="permission_phone">Phone、</string>
    <string name="permission_sensors">Body sensors、</string>
    <string name="permission_sms">SMS、</string>
    <string name="permission_storage">Storage、</string>
</resources>
