<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <com.mm.uc.PlayWindow
        android:id="@+id/play_window"
        Cloud_DownImage="@drawable/play_online_ani_ptz_down_h"
        Cloud_InImage="@drawable/play_online_ani_ptz_body_reduce"
        Cloud_LeftDownImage="@drawable/play_online_ani_ptz_leftdown_h"
        Cloud_LeftImage="@drawable/play_online_ani_ptz_left_h"
        Cloud_LeftUpImage="@drawable/play_online_ani_ptz_leftup_h"
        Cloud_OutImage="@drawable/play_online_ani_ptz_body_enlarge"
        Cloud_RightDownImage="@drawable/play_online_ani_ptz_rightdown_h"
        Cloud_RightImage="@drawable/play_online_ani_ptz_right_h"
        Cloud_RightUpImage="@drawable/play_online_ani_ptz_rightup_h"
        Cloud_UpImage="@drawable/play_online_ani_ptz_up_h"
        Focus_SurfaceBG="#AA414D5B"
        Focus_ToolbarBG="#829EBF"
        Normal_SurfaceBG="#414D5B"
        Normal_ToolbarBG="#A6ADB6"
        Open_Image="@drawable/play_online_video_bg"
        PlayWinBG="#000000"
        Reflash_Image="@drawable/play_module_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/layout_playonline_top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/videoPopBg"
        android:orientation="horizontal"
    >
        <Button
            android:id="@+id/btn_back"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/return_icon1" />
        <TextView
            android:id="@+id/video_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/play_online_title"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </RelativeLayout>
    <include layout="@layout/layout_online_ctrl"/>

    <LinearLayout
        android:id="@+id/playonline_control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/capture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_item_capture"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_item_record"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_item_play"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/cloud"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_online_cloud"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
        >
            <TextView
                android:id="@+id/stream_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_online_hd"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stream_assist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_online_sd"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stream_third"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/play_btn_selector"
                android:gravity="center"
                android:text="@string/play_online_fl"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>